unpackaged/main/default/objects/Account/fields/DemoMariaTest__c.field-meta.xml
<CustomField>
    <fullName>DemoMariaTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoMariaTest</label>
    <type>Checkbox</type>
</CustomField>