unpackaged/main/default/objects/Account/fields/NIN__c.field-meta.xml
<CustomField>
    <fullName>NIN__c</fullName>
    <externalId>true</externalId>
    <label>NIN</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>