unpackaged/main/default/objects/Account/fields/RealDemo__c.field-meta.xml
<CustomField>
    <fullName>RealDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RealDemo</label>
    <type>Checkbox</type>
</CustomField>