unpackaged/main/default/objects/Account/fields/TestDemo__c.field-meta.xml
<CustomField>
    <fullName>TestDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestDemo</label>
    <type>Checkbox</type>
</CustomField>