unpackaged/main/default/objects/Account/recordTypes/Test_Stifen.recordType-meta.xml
<RecordType>
    <fullName>Test_Stifen</fullName>
    <active>true</active>
    <label>Test-Stifen</label>
</RecordType>